# app-industry-resilience

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  AUTOMATION.md  AUTOMATION_ROLES.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXTENSION_GUIDE.md  LICENSE  MASTER-VERSIONS.json  Makefile  PLAN.md  PUBLIC_RELEASE_AUDIT.md  README.md  RELEASE_NOTES.md  REPORT.md  REPORTS.md  SECURITY.md  SPEC.md  STATUS.md  STEWARDS_REPORT.md  STYLE-GUIDE.md  TASK.md  TASKLIST.md  TASKSLIST.md  URGENT.md  app.py  codex_chain.json  pyproject.toml  requirements-dev.txt  requirements.txt
.agent/: EXEC_PLAN.md  documentation_sweep_execplan.md
.github/: CODEOWNERS  SECURITY.md  copilot-instructions.md  dependabot.yml  issue-101-code.patch  issue-101-docs.patch  issue-104-code.gz.b64.00  issue-104-code.gz.b64.01  issue-104-code.gz.b64.02  issue-104-code.patch.b64  issue-104-docs.gz.b64.00  issue-104-docs.gz.b64.01  issue-104-docs.gz.b64.02  issue-104-docs.patch.b64  pull_request_template.md
REPORTS/: 000_CONTEXT.md  001_DIAGNOSIS.md  002_VERIFICATION.md  003_STAGE1_OUTCOME.md  004_STAGE2_OUTCOME.md  005_STAGE3_OUTCOME.md  006_STAGE4_OUTCOME.md  007_STAGE2_VALIDATION.md  008_STAGE3_STEWARDSHIP.md  009_DEPENDENCY_ALIGNMENT.md  010_OFFICIAL_SNAPSHOT_RISK_BRIEF.md  README.md  codex_chain_steps_5_11.md
agents/: __init__.py  idiot_index.py  toolkit.py
assets/: README.md  naics_map.csv
config/: .editorconfig  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline
data/: README.md  official_industry_snapshot.csv  sample_industries.csv
docs/: ACCESSIBILITY_AUDIT.md  AGENTS.md  AI_INTERFACE.md  ANALYTICS_HEALTH.md  API_HEADLESS.md  API_REFERENCE.md  API_VERSIONING_AND_LINEAGE.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONNECTORS.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DEPENDENCIES.md  INDUSTRY_SHOCK_CASE_STUDY.md  OBSERVABILITY_SNAPSHOTS.md  OPERATIONS_INCIDENT_RESPONSE.md  PERFORMANCE.md  PUBLIC_RELEASE_VALIDATION.md  README.md  RELEASE_NOTES_V0.2.0.md  SCENARIO_LAB.md  SPEC.md  STYLE-GUIDE.md  WORKFLOWS_DATA_REFRESH.md  exec-plan.md
extensions/: README.md  manifest.json
fastapi/: README.md  __init__.py  testclient.py
fastapi_compat/: __init__.py  testclient.py
pydantic/: README.md
pydantic_compat/: __init__.py
scripts/: __init__.py  analytics_health.py  audit_metrics.py  bump_version.py  changelog_entry.py  check_health.py  check_trailing_whitespace.py  codespell.py  commitlint.py  connectors_catalog.py  diagnostics_bundle.py  extensions_catalog.py  generate_sbom.py  (+10 more)
(+217 files in other folders)
